--- a/Mercado/MercadoApp/templates/admin_templates/base_template.html
+++ b/Mercado/MercadoApp/templates/admin_templates/base_template.html
@@ -68,7 +68,7 @@
       </div>
       <footer class="main-footer">
         <div class="footer-left">
-          Copyright &copy; 2021 <div class="bullet"></div>  SuperCodersStore 
+          Copyright &copy; 2022 <div class="bullet"></div>  MercadoVirtual
         </div>
         <div class="footer-right">
           
