--- a/Mercado/MercadoApp/templates/admin_templates/category_update.html
+++ b/Mercado/MercadoApp/templates/admin_templates/category_update.html
@@ -37,7 +37,7 @@ Category Update
         <label>Current {{ field.label }}</label><br>
         <div class="card">
                   <div class="card-body">
-                                  <img src="/media/{{ field.value }}" style="height:250px"/>
+                                  <img src="/media/{{category.thumbnail }}" style="height:250px"/>
                   </div>
                 </div>
         </div>
