--- a/Mercado/MercadoApp/templates/admin_templates/product_create.html
+++ b/Mercado/MercadoApp/templates/admin_templates/product_create.html
@@ -207,9 +207,9 @@ Product Create
 
 
 {% block custom_js %}
-<script src="//cdn.tiny.cloud/1/u6oa5pnpaa1vxho1md7uk4zmq2ai7xuf5o5wfgyrc131vpj6/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-<script>
-  tinymce.init({
+<script src="https://cdn.tiny.cloud/1/nnkwsn9s36472cukhq8xuw22gt292wmqq54c7ri7bqi34yoe/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+<script>  
+tinymce.init({
         selector: "textarea#long_desc",
         height: 300,
         plugins: [
